@@ -143,7 +143,8 @@ function Get-Java
 
     Write-Verbose "Java detected at '$javaCMD'"
 
-    if (-not (Confirm-JavaVersion -Path $javaCMD)) { Write-Error "This instance of Java is not supported"; return $null }
+    $javaVersion = Get-JavaVersion -Path $javaCMD
+    if (-not $javaVersion.isValid) { Write-Error "This instance of Java is not supported"; return $null }
 
     # Shell arguments for the Neo4jServer and Arbiter classes
     $ShellArgs = @()
@@ -207,33 +208,62 @@ WARNING: dbms.memory.heap.max_size will require a unit suffix in a
       # Parse Java config settings - GC
       $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.enabled' -Neo4jServer $Neo4jServer)
       if (($option -ne $null) -and ($option.value.ToLower() -eq 'true')) {
-        $ShellArgs += "-Xloggc:`"$($Neo4jServer.Home)/gc.log`""
+        if ($javaVersion.isJava8) {
+          # JAVA 8 GC logs configuration
+          $ShellArgs += "-Xloggc:`"$($Neo4jServer.LogDir)/gc.log`""
 
-        $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.options' -Neo4jServer $Neo4jServer)
-        if ($option -eq $null) {
-          $ShellArgs += @('-XX:+PrintGCDetails',
-            '-XX:+PrintGCDateStamps',
-            '-XX:+PrintGCApplicationStoppedTime',
-            '-XX:+PrintPromotionFailure',
-            '-XX:+PrintTenuringDistribution',
-            '-XX:+UseGCLogFileRotation')
-        } else {
-          # The GC options _should_ be space delimited
-          $ShellArgs += ($option.value -split ' ')
-        }
+          $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.options' -Neo4jServer $Neo4jServer)
+          if ($option -eq $null) {
+            $ShellArgs += @('-XX:+PrintGCDetails',
+              '-XX:+PrintGCDateStamps',
+              '-XX:+PrintGCApplicationStoppedTime',
+              '-XX:+PrintPromotionFailure',
+              '-XX:+PrintTenuringDistribution',
+              '-XX:+UseGCLogFileRotation')
+          } else {
+            # The GC options _should_ be space delimited
+            $ShellArgs += ($option.value -split ' ')
+          }
 
-        $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.rotation.size' -Neo4jServer $Neo4jServer)
-        if ($option -ne $null) {
-          $ShellArgs += "-XX:GCLogFileSize=$($option.value)"
-        } else {
-          $ShellArgs += "-XX:GCLogFileSize=20m"
-        }
+          $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.rotation.size' -Neo4jServer $Neo4jServer)
+          if ($option -ne $null) {
+            $ShellArgs += "-XX:GCLogFileSize=$( $option.value )"
+          } else {
+            $ShellArgs += "-XX:GCLogFileSize=20m"
+          }
 
-        $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.rotation.keep_number' -Neo4jServer $Neo4jServer)
-        if ($option -ne $null) {
-          $ShellArgs += "-XX:NumberOfGCLogFiles=$($option.value)"
+          $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.rotation.keep_number' -Neo4jServer $Neo4jServer)
+          if ($option -ne $null) {
+            $ShellArgs += "-XX:NumberOfGCLogFiles=$( $option.value )"
+          } else {
+            $ShellArgs += "-XX:NumberOfGCLogFiles=5"
+          }
         } else {
-          $ShellArgs += "-XX:NumberOfGCLogFiles=5"
+          # JAVA 9 and newer GC logs configuration
+          $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.options' -Neo4jServer $Neo4jServer)
+          if ($option -ne $null) {
+            $gcOptions = $option.value
+          } else {
+            $gcOptions = '-Xlog:gc*,safepoint,age*=trace'
+          }
+          # GC file name should be escaped on Windows because of ':' usage as part of absolute name
+          $gcFile = "\`"" + "$($Neo4jServer.LogDir)/gc.log" + "\`""
+          $gcOptions += ":file=$( $gcFile )::"
+
+          $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.rotation.keep_number' -Neo4jServer $Neo4jServer)
+          if ($option -ne $null) {
+            $gcOptions += "filecount=$( $option.value )"
+          } else {
+            $gcOptions += "filecount=5"
+          }
+
+          $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.rotation.size' -Neo4jServer $Neo4jServer)
+          if ($option -ne $null) {
+            $gcOptions += ",filesize=$( $option.value )"
+          } else {
+            $gcOptions += ",filesize=20m"
+          }
+          $ShellArgs += $gcOptions
         }
       }
       $ShellArgs += @("-Dfile.encoding=UTF-8",
@@ -246,21 +276,13 @@ WARNING: dbms.memory.heap.max_size will require a unit suffix in a
     if ($PsCmdlet.ParameterSetName -eq 'UtilityInvoke')
     {
       # Generate the commandline args
-      $ClassPath = ''
+      $ClassPath = "$($Neo4jServer.Home)/lib/*;$($Neo4jServer.Home)/bin/*"
       # Augment with tools.jar if found
-      if (Test-Path -Path "$EnvJavaHome\lib\tools.jar") { $ClassPath += "`"$EnvJavaHome\lib\tools.jar`";" }
-      # Enumerate all JARS in the lib directory and add to the class path
-      Get-ChildItem -Path (Join-Path -Path $Neo4jServer.Home -ChildPath 'lib') | Where-Object { $_.Extension -eq '.jar' } | ForEach-Object {
-        $ClassPath += "`"$($_.FullName)`";"
-      }
-      # Enumerate all JARS in the bin directory and add to the class path
-      Get-ChildItem -Path (Join-Path -Path $Neo4jServer.Home -ChildPath 'bin') | Where-Object { $_.Extension -eq '.jar' } | ForEach-Object {
-        $ClassPath += "`"$($_.FullName)`";"
-      }
-      if ($ClassPath.Length -gt 0) { $ClassPath = $ClassPath.SubString(0,$ClassPath.Length - 1) } # Strip the trailing semicolon if needed
+      if (Test-Path -Path "$EnvJavaHome\lib\tools.jar") { $ClassPath += ";$EnvJavaHome\lib\tools.jar" }
 
       $ShellArgs = @()
-      $ShellArgs += @("-classpath $($EnvClassPrefix);$ClassPath",
+      $ShellArgs += @("-XX:+UseParallelGC",
+        "-classpath `"$($EnvClassPrefix);$ClassPath`"",
         "-Dbasedir=`"$($Neo4jServer.Home)`"",`
            '-Dfile.encoding=UTF-8')
 
